@@ -4,6 +4,13 @@
         <input type="text"  class="stdedit" name="pref_password" id="password" size="20" value="[% prefs.password %]"></input>
     [% END %]
 
+    [% WRAPPER setting title="PLUGIN_MATERIAL_SKIN_ALLOW_DOWNLOAD" desc="PLUGIN_MATERIAL_SKIN_ALLOW_DOWNLOAD_DESC" %]
+        <select class="stdedit" name="pref_allowDownload" id="allowDownload">
+            <option [% IF NOT prefs.allowDownload %]selected [% END %]value="0">[% 'NO' | getstring %]</option>
+            <option [% IF prefs.allowDownload %]selected [% END %]value="1">[% 'YES' | getstring %]</option>
+        </select>
+    [% END %]
+
     [% WRAPPER settingGroup  title="PLUGIN_MATERIAL_SKIN_FIXED_VOL" desc="PLUGIN_MATERIAL_SKIN_FIXED_VOL_DESC" %]
         <input type="radio" name="pref_respectFixedVol" value="0" [% IF prefs.pref_respectFixedVol == 0 %]checked[% END %]>[% 'PLUGIN_MATERIAL_SKIN_FIXED_VOL_NORMAL'  | getstring %]<br/>
         <input type="radio" name="pref_respectFixedVol" value="1" [% IF prefs.pref_respectFixedVol == 1 %]checked[% END %]>[% 'PLUGIN_MATERIAL_SKIN_FIXED_VOL_SPECIAL' | getstring %]<br/>
